@@ -1,3 +1,6 @@
+[B]Version v1.7.7[/B]
+- Added new turtle version with DM fix.
+
 [B]Version v1.7.6[/B]
 - Disabled Google Analytics by default. Later it settings might be provided.
 
